WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127917
WebKitTestRunner fails to link - missing rowHeaders and columnHeaders
https://bugs.webkit.org/show_bug.cgi?id=127917
Summary
WebKitTestRunner fails to link - missing rowHeaders and columnHeaders
David Farler
Reported
2014-01-30 10:00:18 PST
After 162986,
https://bugs.webkit.org/show_bug.cgi?id=127688
, an implementation for rowHeaders and columnHeaders was left out of AccessibilityUIElementIOS. We need stubs or reference a common Mac implementation of these methods.
Attachments
patch
(1.36 KB, patch)
2014-01-30 10:06 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-01-30 10:01:35 PST
i'll take care of this now
David Farler
Comment 2
2014-01-30 10:04:58 PST
Thanks! I've added the Tools subdirectory to the CI builds.
chris fleizach
Comment 3
2014-01-30 10:06:13 PST
Created
attachment 222681
[details]
patch
David Farler
Comment 4
2014-01-30 10:42:31 PST
Sorry, one more thing - DumpRenderTree also needs implementations.
chris fleizach
Comment 5
2014-01-30 10:57:24 PST
(In reply to
comment #4
)
> Sorry, one more thing - DumpRenderTree also needs implementations.
Did DRT fail, because I saw this line was added #if !PLATFORM(MAC) void AccessibilityUIElement::uiElementArrayAttributeValue(JSStringRef, Vector<AccessibilityUIElement>&) const { } void AccessibilityUIElement::columnHeaders(Vector<AccessibilityUIElement>&) const { } void AccessibilityUIElement::rowHeaders(Vector<AccessibilityUIElement>&) const { } #endif
David Farler
Comment 6
2014-01-30 10:59:09 PST
It did but I must be behind that change, I don't have those lines in
r163079
. If those were added after that, then disregard and I'll update :)
chris fleizach
Comment 7
2014-01-30 14:20:11 PST
Comment on
attachment 222681
[details]
patch Thanks!
WebKit Commit Bot
Comment 8
2014-01-30 14:48:08 PST
Comment on
attachment 222681
[details]
patch Clearing flags on attachment: 222681 Committed
r163117
: <
http://trac.webkit.org/changeset/163117
>
WebKit Commit Bot
Comment 9
2014-01-30 14:48:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug