WebKitTestRunner fails to link - missing rowHeaders and columnHeaders https://bugs.webkit.org/show_bug.cgi?id=127917

Reviewed by Andy Estes.

* WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::rowHeaders):
(WTR::AccessibilityUIElement::columnHeaders):


Canonical link: https://commits.webkit.org/145942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163117 268f45cc-cd09-0410-ab3c-d52691b4dbfc